--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,30 +1,24 @@
 name: Generate Snake
 
 on:
-  schedule:
+  schedule: # jalan otomatis tiap 12 jam
     - cron: "0 */12 * * *"
-  workflow_dispatch:
-  push:
-    branches:
-      - main
+  workflow_dispatch: # bisa dijalankan manual juga
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Generate snake animation
+      - name: Generate snake.svg
         uses: Platane/snk@v3
         with:
           github_user_name: Indah135
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          outputs: dist/snake.svg
 
-      - name: Push to output branch
+      - name: Upload snake.svg ke branch output
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
