--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,26 +1,25 @@
 name: Generate Snake
 
 on:
-  schedule: # jalan otomatis tiap hari
-    - cron: "0 0 * * *"
-  workflow_dispatch: # bisa dijalankan manual juga
+  schedule:
+    - cron: "0 0 * * *" # jalan tiap hari jam 00:00 UTC
+  workflow_dispatch: # bisa dijalankan manual
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Generate Snake
+      - name: Generate Snake Animation
         uses: Platane/snk@v3
         with:
           github_user_name: Indah135
           outputs: dist/snake.svg
 
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Deploy to output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
